# pharos

./: .editorconfig  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: main.yaml
pharos/: __init__.py  backend.py  client.py  cluster.py  exceptions.py  fields.py  iterator.py  jinja.py  k8s_utils.py  lookups.py  managers.py  models.py  operators.py  query.py  utils.py
pharos/templates/: variable_crd.yaml  variables.yaml
tests/: test.yaml  test_client.py  test_query.py
