[metadata]
name = Pharos
version = attr: pharos.__version__
url = https://github.com/Yiling-J/pharos
author = Yiling
author_email = njjyl723@gmail.com
description = Managing Kubernetes resources in Python.
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Kubernetes
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/Yiling-J/pharos
    Source = https://github.com/Yiling-J/pharos

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    jsonpath-ng
    kubernetes
    PyYAML
    Jinja2
